force-app/main/default/objects/affectlayer__ChorusEngagementUser__c/affectlayer__ChorusEngagementUser__c.object-meta.xml
<CustomObject>
    <label>Chorus Engagement User</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chorus Engagement Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>