force-app/main/default/objects/affectlayer__ChorusEngagementUser__c/fields/affectlayer__EngagementUserId__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__EngagementUserId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id</label>
    <type>Text</type>
</CustomField>