force-app/main/default/objects/affectlayer__ChorusEngagementUser__c/fields/affectlayer__User__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chorus_Engagement_Users</relationshipName>
    <type>Lookup</type>
</CustomField>