force-app/main/default/objects/affectlayer__ChorusEngagementUser__c/fields/affectlayer__UserEmail__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__UserEmail__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>