force-app/main/default/objects/affectlayer__ChorusEngagementUser__c/fields/affectlayer__UserName__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__UserName__c</fullName>
    <label>UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>